Switch default implementation of memoized
Make test run in a forked VM